--- a/contact_us.css
+++ b/contact_us.css
@@ -323,6 +323,16 @@ p.service-provide {
     margin: 10px 0 ;
 }
 
+.award {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.award h4 {
+    width: 100%;
+    margin: unset;
+    font-size: 18px;
+}
 .award p {
     padding: 8px;
     background: #efef34;
@@ -330,6 +340,7 @@ p.service-provide {
     width: fit-content;
     font-style: italic;
     font-weight: bold;
+    margin: 10px;
 }
 
 ::-webkit-scrollbar {
