--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ a {
 
 .carousel-inner {
     display: flex;
-    width: 300%;
+    width: 400%;
     transition: transform 1s ease;
 }
 
@@ -145,11 +145,15 @@ input[type="radio"]:nth-of-type(1):checked~.carousel-inner {
 }
 
 input[type="radio"]:nth-of-type(2):checked~.carousel-inner {
-    transform: translateX(-33.333%);
+    transform: translateX(-25%);
 }
 
 input[type="radio"]:nth-of-type(3):checked~.carousel-inner {
-    transform: translateX(-66.666%);
+    transform: translateX(-50%);
+}
+
+input[type="radio"]:nth-of-type(4):checked~.carousel-inner {
+    transform: translateX(-75%);
 }
 
 /* Add more transform values for additional images */
@@ -174,7 +178,8 @@ input[type="radio"]:nth-of-type(3):checked~.carousel-inner {
 
 input[type="radio"]:nth-of-type(1):checked~.carousel-controls #control1,
 input[type="radio"]:nth-of-type(2):checked~.carousel-controls #control2,
-input[type="radio"]:nth-of-type(3):checked~.carousel-controls #control3 {
+input[type="radio"]:nth-of-type(3):checked~.carousel-controls #control3,
+input[type="radio"]:nth-of-type(4):checked~.carousel-controls #control4 {
     background-color: #333;
 }
 
