--- a/contact_us.css
+++ b/contact_us.css
@@ -193,10 +193,17 @@ p.service-provide {
 }
 
 .form {
+    position: relative;
     transform: translateX(-5%);
     background: white;
     box-shadow: 0px 0px 63.2px 10px rgba(0, 0, 0, 0.25);
     z-index: 0;
+}
+.form iframe {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .team {
