--- a/header.css
+++ b/header.css
@@ -5,6 +5,7 @@ header {
     top: 0;
     position: sticky !important; 
     width: 100%;
+    height: fit-content;
     z-index: 500;
     border-bottom: rgba(0, 0, 0, 0.25) solid 5px;
 }
