--- a/contact_us.css
+++ b/contact_us.css
@@ -300,6 +300,7 @@ p.service-provide {
     flex-wrap: wrap;
     /* justify-content: center; */
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .team_member {
