--- a/career.css
+++ b/career.css
@@ -202,6 +202,7 @@ p.service-provide {
     }
     .admin_sales img, .telemarketing img, .internship img , .sales_partner img, .customer_services img {
         width: 60%;
+        height: auto;
     }
 }
 
