--- a/service.css
+++ b/service.css
@@ -327,9 +327,23 @@ a {
 
 .below-contact p {
     margin: unset;
-    margin-top: 3px;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
+.button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #216b24;
+}
 
 
 .wave-container {
@@ -451,7 +465,7 @@ a {
     }
 
     .left-column {
-        flex-basis: 30%; 
+        flex-basis: 30%;
         width: 100%;
     }
 
