--- a/contact_us.css
+++ b/contact_us.css
@@ -122,11 +122,21 @@ p.service-provide {
     z-index: 0;
 }
 
+.working-hour {
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    width: 80%;
+    border-left: #28a745 solid 5px;
+    justify-content: center;
+}
+
 .enquiry {
     position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background: linear-gradient(180deg, #FFFFFF 0%, #AFC8FF 50%, #FFFFFF 100%);
 }
 
 .enquiry_content,
@@ -174,6 +184,14 @@ p.service-provide {
     width: 30%;
     height: fit-content;
     margin: 10px;
+}
+
+.panda2 {
+    position: absolute;
+    width: 30%;
+    height: fit-content;
+    right: 10%;
+    bottom: 1px;
 }
 
 .triangle {
@@ -444,6 +462,22 @@ p.service-provide {
         width: 70%;
     }
 
+    .panda-icon {
+        position: absolute;
+        right: 0;
+        bottom: 80px;
+        width: 18vw;
+        height: auto;
+    }
+
+    .panda2 {
+    position: absolute;
+    width: 30%;
+    height: fit-content;
+    right: 0px;
+    bottom: 1px;
+}
+
 }
 
 @media (max-width :550px) {
@@ -489,6 +523,20 @@ p.service-provide {
 }
 
 @media (max-width :475px) {
+    .services {
+        background-image: url('pictures/scc_background.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        position: relative;
+        height: 200px;
+    }
+
+    .address_content p {
+        text-align: center;
+        font-size: 16px;
+    }
+
     .address_content {
         width: 100%;
         box-shadow: 0 10px 50px rgba(0, 0, 0, 0.1);
@@ -514,6 +562,35 @@ p.service-provide {
 
     .form {
         height: 500px;
-        width: 80%;
+        width: 90%;
+    }
+
+    h2.serviceh2 {
+        color: #000000;
+        font-size: 0.6em;
+        margin: 0 auto;
+        padding-top: 70px;
+        margin-left: 60px;
+    }
+    
+    h3.serviceh3 {
+        color: #000000;
+        font-size: 1.6em;
+        margin: 0 auto;
+        margin-left: 60px;
+    }
+    
+    .serviceh3::after {
+        content: '';
+        display: block;
+        width: 230px;
+        height: 4px;
+        background-color: #28a745;
+    }
+
+    p.service-provide {
+        font-size: 1.2em;
+        margin: 0 auto;
+        margin-left: 60px;
     }
 }
