--- a/contact_us.css
+++ b/contact_us.css
@@ -122,13 +122,28 @@ p.service-provide {
     z-index: 0;
 }
 
-.working-hour {
+.working_hour {
     position: relative;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 80%;
     border-left: #28a745 solid 5px;
     justify-content: center;
+
+    margin: 0 5% 100px 5%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.working_hour h2, .working_hour p, .working_hour ul{
+    width: 90%;
+}
+
+.working_hour li {
+    list-style-position: inside;
+}
+.working-hour h2, .working-hour p {
+    position: relative;
 }
 
 .enquiry {
@@ -552,6 +567,9 @@ p.service-provide {
         z-index: 0;
     }
 
+    .working_hour {
+        margin: 80px 0;
+    }
     .enquiry {
         margin-top: 100px;
     }
