--- a/career.css
+++ b/career.css
@@ -167,6 +167,13 @@ p.service-provide {
     margin: 5% 10%;
 }
 
+.benefit img {
+    position: absolute;
+    right: 5%;
+    bottom: 1%;
+    width: 12%;
+    height: auto;
+}
 .green_rec {
     width: 100%;
     height: 40px;
